--- a/index.html
+++ b/index.html
@@ -8,8 +8,41 @@
    <link rel="stylesheet" type="text/css" href="normalize.css">
    <link rel="stylesheet" type="text/css" href="styles.css">
    <link href="https://fonts.googleapis.com/css?family=Quicksand:500,700" rel="stylesheet">
+   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
+   <div class="float-nav">
+      <a href="#" class="menu-btn">
+        <ul>
+          <li class="line"></li>
+          <li class="line"></li>
+          <li class="line"></li>
+        </ul>
+        <div class="menu-txt">Menu</div>
+      </a>
+    </div>
+    
+    <div class="main-nav">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li ><a href="#" class="submenu">Our Services <i class="fa fa-chevron-down"></i></a>
+            <div class="subheading">
+               <ul>
+                  <li>
+                     <a href="#">Dog Walking</a>
+                     <a href="#">Dog Boarding</a>
+                     <a href="#">Dog Sitting</a>
+                  </li>
+               </ul>
+            </div>
+            
+         </li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Campus Community</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Account Login</a></li>
+      </ul>
+   </div>
    <section class="banner">
       <img src="assets/main-banner.png" alt="main-banner" class="banner-img">
       <div class="header">
@@ -33,7 +66,7 @@
             <div class="card-desc">
                <h2>Dog Walking</h2>
                <p>Got a bit more on this week, and need someone to exercise your dog? Or need someone to regularly walk your dog as you’re no longer able to do it? Look no futher than our service.</p>
-               <a href="#">Learn More</a>
+               <a href="#">Learn More <i class="fa fa-chevron-rigth"></i></a>
             </div>
          </div>
          <div class="card">
@@ -43,7 +76,7 @@
             <div class="card-desc">
                <h2>Dog Boarding</h2>
                <p>Instead of going to the kennels, your dog gets to go to someones else, often with other pets and people for company. Drop off and pick up options also available.</p>
-               <a href="#">Learn More</a>
+               <a href="#">Learn More <i class="fa fa-chevron-rigth"></i></a>
             </div>
          </div>
          <div class="card">
@@ -53,10 +86,20 @@
             <div class="card-desc">
                <h2>Dog Sitting</h2>
                <p>Your dog gets the comfort and convenience of staying in their own home, as the sitter comes to yours! There is the added bonus of your home being looked after.</p>
-               <a href="#">Learn More</a>
+               <a href="#">Learn More <i class="fa fa-chevron-rigth"></i></a>
             </div>
          </div>
       </div>
    </section>
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+   <script>
+      $('.float-nav').click(function() {
+         $('.main-nav, .menu-btn').toggleClass('active');
+      });
+      $('.submenu').click(function() {
+         $('.subheading').toggleClass('active');
+      });
+</script>
 </body>
 </html>
